--- a/cc/board/board_read.css
+++ b/cc/board/board_read.css
@@ -1,5 +1,5 @@
 #board_read {
-	width:900px;
+	width:100%;
 	position: relative;
 	word-break:break-all;
 }
@@ -11,7 +11,7 @@
 	margin-left:10px;
 }
 #bo_line {
-	width:880px;
+	width:100%;
 	height:2px;
 	background: gray;
 	margin-top:20px;
