--- a/aa/cc/test1.css
+++ b/aa/cc/test1.css
@@ -108,6 +108,7 @@
 	text-align: center;
 	-ms-overflow-style: none;
     scrollbar-width: none;
+	text-overflow: ellipsis;
 }
 #right::-webkit-scrollbar {
     display: none;
@@ -119,4 +120,6 @@ a {
 
 .title {
 	text-overflow: ellipsis;
+	max-width: 100px;
+	white-space: nowrap;
 }
