--- a/aa/cc/board/board.css
+++ b/aa/cc/board/board.css
@@ -48,3 +48,11 @@ ul li {
 	margin-top:20px;
 	right: 0;
 }
+
+.title {
+	text-overflow: ellipsis;
+	max-width: 200px;
+	white-space: nowrap;
+	overflow: hidden;
+	display: block;
+}
