--- a/aa/cc/board/board_1.css
+++ b/aa/cc/board/board_1.css
@@ -50,10 +50,9 @@ ul li {
 }
 
 .title {
-	text-overflow: ellipsis;
-	max-width: 200px;
-	white-space: nowrap;
-	overflow: hidden;
-	display: block;
-	font-size: 16px;
+	max-width: 74%;
+	display: inline-block;
+    font-size: 16px;
+    white-space: pre-wrap;
+    word-break: break-all;
 }
