--- a/aa/cc/header.css
+++ b/aa/cc/header.css
@@ -1,6 +1,6 @@
 input[type="checkbox"] {display: none;}
 [id="menuicon"] + label {display:block;margin:30px;width:60px;height:50px;position:relative;cursor:pointer;}
-
+[id="menuicon"] + label span {display:block;position:absolute;width:100%;height:5px;border-radius:30px;background:#000;transition:all .35s;}
 [id="menuicon"] + label span:nth-child(1) {top:0;}
 [id="menuicon"] + label span:nth-child(2) {top:50%;transform:translateY(-50%);}
 [id="menuicon"] + label span:nth-child(3) {bottom:0;}
@@ -36,12 +36,6 @@ ul, li {list-style:none;}
     -webkit-tap-highlight-color : transparent;
 }
 
-
-.sidebar > ul > .big_menu {
-    position: relative;
-    padding: 8px 8px 8px 10%;
-    font-size: 20px;
-}
 
 .sidebar > ul > .big_menu > .small_menu {
     position: relative;
