--- a/aa/cc/header.css
+++ b/aa/cc/header.css
@@ -37,6 +37,12 @@ ul, li {list-style:none;}
 }
 
 
+.sidebar > ul > .big_menu {
+    position: relative;
+    padding: 8px 8px 8px 10%;
+    font-size: 20px;
+}
+
 .sidebar > ul > .big_menu > .small_menu {
     position: relative;
     /*transform: scaleY(0);*/
