--- a/aa/cc/header.css
+++ b/aa/cc/header.css
@@ -1,5 +1,5 @@
 input[type="checkbox"] {display: none;}
-[id="menuicon"] + label {display:block;margin:30px;width:60px;height:50px;position:relative;cursor:pointer;}
+[id="menuicon"] + label {display:block;margin:30px;width:40px;height:34px;position:relative;cursor:pointer;}
 [id="menuicon"] + label span {display:block;position:absolute;width:100%;height:5px;border-radius:30px;background:#000;transition:all .35s;}
 [id="menuicon"] + label span:nth-child(1) {top:0;}
 [id="menuicon"] + label span:nth-child(2) {top:50%;transform:translateY(-50%);}
@@ -22,14 +22,33 @@ ul, li {list-style:none;}
 #menu {
     list-style-type: none;
     line-height: 70px;
-    padding-top: 100px;
+    padding-top: 70px;
 }
 
 #menu > .join {
-    font-size: 15px;
+    font-family: 'Dongle'!important;
+    font-size: 35px;
     padding-left: 10%;
-    float:left;
+    float: left;
 }
+
+#menu > .join2 {
+    font-family: 'Dongle'!important;
+    font-size: 35px;
+    padding-left: 10%;
+}
+
+.join_line {
+    display: block;
+    width: 100%;
+    height: 2px;
+    border-radius: 30px;
+    background: white;
+    margin-bottom: 20px;
+    margin-left: 7%;
+    width: 85%;
+}
+
 .side_menu {
     text-decoration: none;
     color:#fff;
@@ -39,14 +58,16 @@ ul, li {list-style:none;}
 
 .sidebar > ul > .big_menu {
     position: relative;
-    padding: 8px 8px 8px 10%;
-    font-size: 20px;
+    padding: 8px 8px 0px 10%;
+    font-family: 'Dongle'!important;
+    font-size: 30px;
 }
 
 .sidebar > ul > .big_menu > .small_menu {
     position: relative;
     /*transform: scaleY(0);*/
     padding: 8px 8px 8px 10%;
-    font-size: 15px;
+    font-family: 'Dongle'!important;
+    font-size: 25px;
     transition: 0.35s;
 }
