--- a/aa/cc/test1.css
+++ b/aa/cc/test1.css
@@ -125,3 +125,25 @@ a {
 	overflow: hidden;
 	display: block;
 }
+
+* {
+	font-family: 'Dongle'!important;
+}
+
+.board_title {
+	font-size: 30px;
+	float: left;
+	margin: 0px 0px 0px 8px;
+}
+.board_top {
+	width: 70%;
+	font-size: 20px;
+	margin: 0;
+	padding: 0;
+}
+.board_top2 {
+	width: 30%;
+	font-size: 20px;
+	margin: 0;
+	padding: 0;
+}
