--- a/aa/cc/board/board.css
+++ b/aa/cc/board/board.css
@@ -5,7 +5,6 @@
 	margin: 0 auto;
 	padding: 0;
 	font-family: 'Dongle'!important;
-	font-size: 20px;
 }
 .board_title {
 	font-size: 80px
@@ -32,7 +31,7 @@ ul li {
 	position: relative;
 }
 .list-table {
-	margin-top: 0px;
+	margin-top: -20px;
 }
 .list-table thead th{
 	height:40px;
@@ -43,7 +42,7 @@ ul li {
 }
 .list-table tbody td{
 	text-align:center;
-	padding:10px 0;
+	padding:0px;
 	border-bottom:1px solid #CCC; height:20px;
 	font-size: 14px 
 }
@@ -65,7 +64,7 @@ ul li {
 /*paging*/
 #page_num {
 	width: 100%;
-	font-size: 14px;
+	font-size: 20px;
 	text-align: center;
 	margin-top:30px;
 }
@@ -81,6 +80,7 @@ ul li {
 	text-align: center;
 }
 
+
 .paging {
 	display: inline-block;
 	padding: 3px 5px;
@@ -89,6 +89,16 @@ ul li {
 	background: #ccc;
 	color: #000;
 	text-decoration: none;
+}
+.paging_number {
+	display: inline-block;
+	padding: 3px 5px;
+	margin-right: 10px;
+	font-family:Tahoma;
+	background: #ccc;
+	color: #000;
+	text-decoration: none;
+	width: 24px;
 }
 #fo_re {
 	background: #333;
