--- a/aa/cc/board/board.css
+++ b/aa/cc/board/board.css
@@ -79,6 +79,9 @@ ul li {
 	margin-left: 10px; 
 	text-align: center;
 }
+#page_num ul li a {
+-webkit-tap-highlight-color : transparent;
+}
 
 
 .paging {
