--- a/aa/cc/test1.css
+++ b/aa/cc/test1.css
@@ -127,23 +127,23 @@ a {
 }
 
 * {
-	font-family: 'Dongle'!important;
+	font-family: 'Gowun Batang', serif;
 }
 
 .board_title {
-	font-size: 30px;
+	font-size: 20px;
 	float: left;
 	margin: 0px 0px 0px 8px;
 }
 .board_top {
 	width: 70%;
-	font-size: 20px;
+	font-size: 17px;
 	margin: 0;
 	padding: 0;
 }
 .board_top2 {
 	width: 30%;
-	font-size: 20px;
+	font-size: 17px;
 	margin: 0;
 	padding: 0;
 }
