--- a/aa/cc/radio.css
+++ b/aa/cc/radio.css
@@ -1,7 +1,3 @@
-.other {
-    margin-left: 20px !important;
-}
-
 #myform fieldset{
     display: inline-block;
     border: 0;
@@ -11,20 +7,20 @@
     display: none;
 }
 #myform label{
-    font-size: 3em;
+    font-size: 10px;
     color: transparent;
     text-shadow: 0 0 0 #f0f0f0;
 }
 #myform label:hover{
-    text-shadow: 0 0 0 #a00;
+    text-shadow: 0 0 0 #00AFFF;
 }
 #myform label:hover ~ label{
-    text-shadow: 0 0 0 #a00;
+    text-shadow: 0 0 0 #00AFFF;
 }
 #myform fieldset legend{
     text-align: left;
 }
 #myform input[type=radio]:checked ~ label{
-    text-shadow: 0 0 0 #a00;
+    text-shadow: 0 0 0 #00AFFF;
 }
 
