--- a/aa/cc/board/board_write.css
+++ b/aa/cc/board/board_write.css
@@ -1,5 +1,5 @@
 #board_write {
-	width:900px;
+	width:100%;
 	position:relative;
 	margin:0 auto;
 }
@@ -38,7 +38,7 @@
 #in_content textarea {
 	font:14px;
 	color:#333;
-	width: 900px;
+	width: 80%;
 	height: 400px;
 	resize: none;
 }
@@ -53,4 +53,9 @@
 .bt_se button {
 	width:100px;
 	height:30px;
+}
+a {
+	-webkit-tap-highlight-color : transparent;
+	text-decoration: none;
+	color: black;
 }
